k8s/vue/vue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: vue
  template:
    metadata:
      labels:
        component: vue
    spec:
      serviceAccountName: pull-sa
      containers:
        - name: vue
          image: 'tsadimas/vue-cp:0.1'
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
